# xfce4-genmon-plugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  README.md  meson.build  meson_options.txt
data/: CMakeLists.txt  config.ui  genmon-budgie.desktop.in  genmon-budgie.desktop.plugin.in  genmon-mate.desktop.plugin.in  genmon.desktop.plugin.in  genmon.desktop.plugin.in.cmake  genmon.desktop.xfce.in  main.ui  meson.build  org.valapanel.toplevel.genmon.gschema.xml
data/scripts/: CMakeLists.txt  googcal  monBat.in  monCPU.in  monUSB.in  monWIFI.in  sysstat.in
genmon/: CMakeLists.txt  budgie-panel-genmon.c  mate-panel-genmon.c
lib/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  POTFILES.in  be.po  genmon.pot  meson.build  ru.po
src/: CMakeLists.txt  budgie-panel-genmon.c  budgie-panel-genmon.h  cmdspawn.c  cmdspawn.h  config.h.in  config_gui.c  config_gui.h  definitions.h  genmon.gresource.xml  launcher.c  launcher.h  main.c  mate-panel-genmon.c  mate-panel-genmon.h  meson.build  mon_widget.c  mon_widget.h  util.c  util.h  vala-panel-genmon.c  vala-panel-genmon.h  version.h.in  xfce4-panel-genmon.c  xfce4-panel-genmon.h
