if (ENABLE_XFCE)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/genmon.desktop DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/xfce4/panel/plugins)
endif()
if (ENABLE_MATE)
    add_schema("org.valapanel.toplevel.genmon.gschema.xml")
    configure_file(${CMAKE_SOURCE_DIR}/data/genmon-mate.desktop.plugin.in ${CMAKE_SOURCE_DIR}/data/genmon-mate.desktop.in)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/genmon-mate.desktop DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/mate-panel/applets/ RENAME org.vala-panel.GenMon.mate-panel-applet)
endif()
if (ENABLE_VALAPANEL)
    add_schema("org.valapanel.toplevel.genmon.gschema.xml")
    configure_file(${CMAKE_SOURCE_DIR}/data/genmon.desktop.plugin.in.cmake ${CMAKE_SOURCE_DIR}/data/org.valapanel.genmon.desktop.plugin.in @ONLY)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.valapanel.genmon.plugin DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/vala-panel/applets)
endif()
if (ENABLE_BUDGIE)
    add_schema("org.valapanel.toplevel.genmon.gschema.xml")
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/genmon-budgie.plugin DESTINATION ${CMAKE_INSTALL_LIBDIR}/budgie-desktop/plugins/budgie-genmon-plugin)
endif()

add_subdirectory(scripts)
